--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==5.1.2
+django-prometheus==2.3.1
+prometheus_client==0.21.0
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 sqlparse==0.5.1
