--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django Tests
+name: Django Tests and Deploy
 
 on:
   push:
@@ -68,3 +68,20 @@ jobs:
 
     - name: Push Docker image to DockerHub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/tick12_train_service:${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push  # Ensure image is pushed before deploying
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up kubectl
+      run: |
+        sudo snap install kubectl --classic
+
+    - name: Deploy to DigitalOcean Kubernetes
+      env:
+        KUBECONFIG: ${{ secrets.DIGITALOCEAN_KUBECONFIG }}
+      run: |
+        kubectl rollout restart deployment tick12-train-deploy
