--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,62 +28,72 @@ jobs:
           - 5432:5432
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.12
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.12
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Wait for PostgreSQL to be ready
-      run: sleep 10
+      - name: Wait for PostgreSQL to be ready
+        run: sleep 10
 
-    - name: Run tests
-      env:
-        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        POSTGRES_DB: test_db
-        POSTGRES_USER: postgres
-        DATABASE_URL: postgres://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/test_db
-      run: |
-        python manage.py migrate
-        python manage.py test
+      - name: Run tests
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: test_db
+          POSTGRES_USER: postgres
+          DATABASE_URL: postgres://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/test_db
+        run: |
+          python manage.py migrate
+          python manage.py test
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: test  # Ensure tests pass before building the image
+    needs: test # Ensure tests pass before building the image
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Log in to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/tick12_train_service:${{ github.sha }} .
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/tick12_train_service:${{ github.sha }} .
 
-    - name: Push Docker image to DockerHub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/tick12_train_service:${{ github.sha }}
+      - name: Push Docker image to DockerHub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/tick12_train_service:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push  # Ensure image is pushed before deploying
+    needs: build-and-push # Ensure image is pushed before deploying
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up kubectl
-      run: |
-        sudo snap install kubectl --classic
+      - name: Set up kubectl
+        run: |
+          sudo snap install kubectl --classic
 
-    - name: Write KUBECONFIG to file
-      run: |
-        echo "${{ secrets.DIGITALOCEAN_KUBECONFIG }}" > /tmp/kubeconfig
+      - name: Install doctl
+        run: |
+          sudo snap install doctl --classic
 
-    - name: Deploy to DigitalOcean Kubernetes
-      run: |
-        KUBECONFIG=/tmp/kubeconfig kubectl rollout restart deployment tick12-train-deploy
+      - name: Authenticate with DigitalOcean
+        env:
+          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        run: |
+          doctl auth init -t $DIGITALOCEAN_ACCESS_TOKEN
+
+      - name: Set kubectl context for the Kubernetes cluster
+        run: |
+          doctl kubernetes cluster kubeconfig save do-sgp1-micro-redis-1
+
+      - name: Deploy to DigitalOcean Kubernetes
+        run: |
+          kubectl rollout restart deployment tick12-train-deploy
