--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django==5.1.2
+django-cors-headers==4.5.0
 django-prometheus==2.3.1
 prometheus_client==0.21.0
 psycopg2-binary==2.9.10
